# Todo-Full-Stack-Web-Application-02

./: .dockerignore  .eslintignore  .gitignore  .npmignore  .prettierignore  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: todo-architect.md
.claude/skills/: advanced-cloud-event-driven.md  ai-chatbot.md  full-stack-integration.md  local-k8s-deployment.md  todo-crud-orchestrator.md
.claude/skills/fastapi-backend/: SKILL.md
.claude/skills/fullstack-coordinator/: SKILL.md
.claude/skills/jwt-auth-integration/: SKILL.md
.claude/skills/nextjs-frontend/: SKILL.md
.claude/skills/spec-driven-developer/: SKILL.md
.claude/skills/todo-fullstack-app/: SKILL.md
.specify/memory/: constitution.md
backend/: README.md  auth.py  db.py  main.py  models.py  optimize_database.py  pyproject.toml  schemas.py  test_server.py
backend/routes/: __init__.py  auth.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_auth_utils.py  test_tasks.py
frontend/: CLAUDE.md  README.md  auth.ts  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthForm.tsx  ClientLayout.tsx  ErrorBoundary.tsx  Navbar.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  ThemeToggle.tsx
frontend/src/contexts/: AuthContext.tsx
specs/: todo-app-spec.md
specs/001-todo-frontend/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+25 files in other folders)
